--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -22,7 +22,7 @@
       <app-discussion-card [viewType]="viewType" *ngFor="let discussion of discussions" [discussion]="discussion "></app-discussion-card>
     </div>
     <div *ngIf="isCard()">
-      <div class="row">
+      <div class="col-xs-12">
         <ngx-masonry [options]="{gutter: 10, transitionDuration: '0.2s'}" [useImagesLoaded]="true">
           <ngxMasonryItem class="masonry-item mb-2" *ngFor="let discussion of discussions">
             <app-discussion-card [viewType]="viewType" [discussion]="discussion "></app-discussion-card>
