Adding alternative new user modal. Fixes #188. Fixes #185. Removing full user table. Fixes #187 Adding simplevote style login. Fixes #137.

--- a/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
+++ b/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
@@ -1,4 +1,4 @@
-<select [ngModel]="sortType" (ngModelChange)="changeEvent($event)"
+<select [ngModel]="userService.getUserSettings().defaultSortTypeRadioValue" (ngModelChange)="changeEvent($event)"
   class="form-control discussion-card-select">
   <option disabled>Sorting</option>
   <option disabled>──────────</option>
