--- a/ui/src/app/components/discussion-card-view-type-select/discussion-card-view-type-select.component.html
+++ b/ui/src/app/components/discussion-card-view-type-select/discussion-card-view-type-select.component.html
@@ -1,4 +1,4 @@
-<select [ngModel]="viewType" (ngModelChange)="changeEvent($event)"
+<select [ngModel]="userService.getUserSettings().defaultViewTypeRadioValue" (ngModelChange)="changeEvent($event)"
   class="form-control discussion-card-select">
   <option disabled>Switch View</option>
   <option disabled>──────────</option>
